2007-09-06  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/images/16x16/gramps-zoom-fit-width.png: delete
	* src/images/22x22/gramps-zoom-fit-width.png:
	* src/images/22x22/gramps-zoom-in.png:
	* src/images/22x22/gramps-zoom-out.png:
	* src/images/22x22/gramps-zoom-best-fit.png:
	* src/images/48x48/gramps-zoom-fit-width.png:
	* src/images/48x48/gramps-zoom-out.png:
	* src/images/48x48/gramps-zoom-in.png:
	* src/images/48x48/gramps-zoom-best-fit.png:
	* src/images/scalable/gramps-zoom-best-fit.svg:
	* src/images/scalable/gramps-zoom-fit-width.svg:
	* src/images/scalable/gramps-zoom-out.svg:
	* src/images/scalable/gramps-zoom-in.svg:
	* src/gramps_main.py:
	* src/docgen/GtkPrint.py:
	GUI consistency, all preview scaling icons equal style. When Tango icons
	are finished for this, we will use those, now based on Gnome icons.

2007-09-06  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/images/48x48/gramps-font.png:
	* src/images/scalable/gramps-font.png:
	* src/MarkupText.py:
	* src/gramps_main.py:
	GUI consistency. Use a font icon like background and foreground instead
	of the gtk font select icon. Old request of Zsolt.

2007-09-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: pylint cleanup
	* src/GrampsDbUtils/_GedcomParse.py: fix child references
	* src/ArgHandler.py: fix calling sequence for gedcom

2007-09-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteXML.py: fix typo

2007-09-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbFactories.py: XML direct load not supported
	* src/GrampsDb/Makefile.am: remove installation of GrampsXMLDB.py
	* src/GrampsDbUtils/_WriteXML.py: cleanup

2007-09-05  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py: Some work on graphical reports.

2007-09-04  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py (MediaView.drag_data_received): handle 
	multiple images in a drag-n-drop
